@@ -1689,3 +1689,8 @@
         * scroller : fix the scroller to locate the current page correctly
         in case that the scroller is suddenly resized and then the drag
         couldn't capture the page location.
+
+2013-10-12  Ryuan Choi (ryuan)
+
+        * popup : Change the behavior about adding or removing buttons to keep the
+        user defined position of button.
